--- a/index.html
+++ b/index.html
@@ -537,8 +537,8 @@ h1 {
 </style>
 </head>
 <body>
-<a href="/Info" class="info-button">Info</a>
-<a href="https://discord.gg/95snurYcGX" class="discord-button" target="_blank">Join our Discord</a>
+<a href="/Info.html" class="info-button">Info</a>
+    <a href="https://discord.gg/95snurYcGX" class="discord-button" target="_blank">Join our Discord</a>
 <h1>Sound Space Custom Maps</h1>
 
 <div id="search-container">
@@ -1231,3 +1231,4 @@ document.addEventListener("DOMContentLoaded", loadMapData);
 </script>
 </body>
 </html>
+
