--- a/Info.html
+++ b/Info.html
@@ -60,7 +60,8 @@ p {
         <p>Created by <span class="contact-info">@faworee</span></p>
         <p>If you would like to add maps to this website or are a mapper who wants a map removed, please contact <span class="contact-info">@faworee</span> on Discord or other platforms.</p>
         <p>This is a public site created in my free time to provide a functional way of viewing custom maps.</p>
-        <a href="/" class="back-button">Go Back</a>
+        <a href="/SoundSpaceCustoms/" class="back-button">Go Back</a>   
     </div>
 </body>
+
 </html>
