--- a/index.html
+++ b/index.html
@@ -955,7 +955,7 @@ let patternsHtml = '';
     } else {
         patternsHtml = `
             <div class="patterns-dropdown-container">
-                <span class="patterns-dropdown-toggle no-click">No Data</span>
+                <span class="patterns-dropdown-toggle no-click">No Patterns Data</span>
             </div>
         `;
     }
@@ -1389,6 +1389,11 @@ function loadMapData() {
     ["https://github.com/Trivynium/In-game-maps/raw/main/time%20hard", "Time", "Xeon Diversity", "SnivyTrueForm", "Hard", ["No Data"]],
     ["https://github.com/Trivynium/In-game-maps/raw/main/mtf%20easy", "More Than Friends", "Kazuya", "SnivyTrueForm", "Easy", ["No Data"]],
     ["https://github.com/Trivynium/In-game-maps/raw/main/Where%20is%20this%3F", "ここはどこ...? (Where is this...?)", "Rizum", "SnivyTrueForm", "Easy", ["No Data"]],
+    ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/JET%202%20HOLIDAY%20FUNK.txt", " JET 2 HOLIDAY FUNK", "shogrim", "Porshii", "Brrrr", ["Quantum", "Unconventional", "Tech"]],
+    ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/porshii%20wonderland", "Wonderland", "X3ll3n", "Porshii", "Brrrr", ["No Data"]],
+    ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/snivy%20love%20sick%20logic", "LoveSick! ft. Isabel", "kuNarU", "SnivyTrueForm", "Logic", ["No Data"]],
+
+
     ];
 
     // Convert array data to objects
