--- a/index.html
+++ b/index.html
@@ -1157,7 +1157,6 @@ function loadMapData() {
     ["https://raw.githubusercontent.com/shorttime2009/ss/main/hijacked%20BRRRR", "Hijacked", "John August Pregler", "Llykae2009", "Brrrr", ["No Data"]],
     ["https://github.com/Trivynium/In-game-maps/raw/main/underscore%20hard", "Underscore", "8 Bitty Kitty", "SnivyTrueForm", "Brrrr", ["No Data"]],
     ["https://raw.githubusercontent.com/Demikuu/post-audio-update-maps/main/Embrace%20The%20Nihil", "Embrace The Nihil", "Embrace The Nihil", "Demisnya", "Brrrr", ["No Data"]],
-    ["https://raw.githubusercontent.com/Demikuu/post-audio-update-maps/main/high%20speed%20lane", "High Speed Lane", "High Speed Lane", "Demisnya", "Brrrr", ["No Data"]],
     ["https://raw.githubusercontent.com/SheaNya/FinalizedSSMaps/main/APM%20Music%20-%20Phonk%20Vol.%201%20-%20Bell%20Pepper", "Phonk Vol. 1 - Bell Pepper", "APM Music", "SheaNya", "Brrrr", ["No Data"]],
     ["https://raw.githubusercontent.com/SheaNya/FinalizedSSMaps/main/Phonk%20Vol.%202%20-%20Back%20%26%20The%20Front", "Phonk Vol. 2 - Back & The Front", "APM Music", "SheaNya", "Brrrr", ["No Data"]],
     ["https://raw.githubusercontent.com/SheaNya/FinalizedSSMaps/main/Phonk%20Vol.%20I%20-%20Phonk't%20Out", "Phonk Vol. I - Phonk't Out", "APM music", "SheaNya", "Brrrr", ["No Data"]],
@@ -1394,8 +1393,8 @@ function loadMapData() {
     ["https://github.com/Trivynium/In-game-maps/raw/main/Where%20is%20this%3F", "ここはどこ...? (Where is this...?)", "Rizum", "SnivyTrueForm", "Easy", ["No Data"]],
     ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/JET%202%20HOLIDAY%20FUNK.txt", " JET 2 HOLIDAY FUNK", "shogrim", "Porshii", "Brrrr", ["Quantum", "Unconventional", "Tech"]],
     ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/porshii%20wonderland", "Wonderland", "X3ll3n", "Porshii", "Brrrr", ["No Data"]],
-    ["https://raw.githubusercontent.com/Demikuu/post-audio-update-maps/main/high%20speed%20lane", "LoveSick! ft. Isabel", "kuNarU", "SnivyTrueForm", "Logic", ["No Data"]],
-    ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/snivy%20love%20sick%20logic", "High Speed Lane", "APM Music", "Demisnya", "Brrrr", ["No Data"]],
+    ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/snivy%20love%20sick%20logic", "LoveSick! ft. Isabel", "kuNarU", "SnivyTrueForm", "Logic", ["No Data"]],
+    ["https://raw.githubusercontent.com/Demikuu/post-audio-update-maps/main/high%20speed%20lane", "High Speed Lane", "APM Music", "Demisnya", "Brrrr", ["No Data"]],
 
 
 
@@ -1421,4 +1420,5 @@ document.addEventListener("DOMContentLoaded", loadMapData);
 </script>
 </body>
 </html>
+
 
