fixed few apm music maps having the right artist

--- a/index.html
+++ b/index.html
@@ -1156,11 +1156,11 @@ function loadMapData() {
     ["https://raw.githubusercontent.com/SheaNya/converts/refs/heads/main/The%20Enraged%20Fighters%20Ciem's%20ver.", "the enraged fighters", "APM Music", "ciem", "Brrrr", ["No Data"]],
     ["https://raw.githubusercontent.com/shorttime2009/ss/main/hijacked%20BRRRR", "Hijacked", "John August Pregler", "Llykae2009", "Brrrr", ["No Data"]],
     ["https://github.com/Trivynium/In-game-maps/raw/main/underscore%20hard", "Underscore", "8 Bitty Kitty", "SnivyTrueForm", "Brrrr", ["No Data"]],
-    ["https://raw.githubusercontent.com/Demikuu/post-audio-update-maps/main/Embrace%20The%20Nihil", "Embrace The Nihil", "Embrace The Nihil", "Demisnya", "Brrrr", ["No Data"]],
+    ["https://raw.githubusercontent.com/Demikuu/post-audio-update-maps/main/Embrace%20The%20Nihil", "Embrace The Nihil", "APM Music", "Demisnya", "Brrrr", ["No Data"]],
     ["https://raw.githubusercontent.com/SheaNya/FinalizedSSMaps/main/APM%20Music%20-%20Phonk%20Vol.%201%20-%20Bell%20Pepper", "Phonk Vol. 1 - Bell Pepper", "APM Music", "SheaNya", "Brrrr", ["No Data"]],
     ["https://raw.githubusercontent.com/SheaNya/FinalizedSSMaps/main/Phonk%20Vol.%202%20-%20Back%20%26%20The%20Front", "Phonk Vol. 2 - Back & The Front", "APM Music", "SheaNya", "Brrrr", ["No Data"]],
     ["https://raw.githubusercontent.com/SheaNya/FinalizedSSMaps/main/Phonk%20Vol.%20I%20-%20Phonk't%20Out", "Phonk Vol. I - Phonk't Out", "APM music", "SheaNya", "Brrrr", ["No Data"]],
-    ["https://raw.githubusercontent.com/Demikuu/post-audio-update-maps/main/my%20future", "My Future", "My Future", "Demisnya", "Brrrr", ["No Data"]],
+    ["https://raw.githubusercontent.com/Demikuu/post-audio-update-maps/main/my%20future", "My Future", "APM Music", "Demisnya", "Brrrr", ["No Data"]],
     ["https://raw.githubusercontent.com/xilpy/sacga/main/Fumitake%20Igarashi-Tokyo%20Drift", "Tokyo Drift", "Fumitake Igarashi", "Xilp", "Brrrr", ["No Data"]],
     ["https://raw.githubusercontent.com/Demikuu/post-audio-update-maps/main/bass%20monster", "Bass Monster", "APM Music", "Demisnya", "Brrrr", ["No Data"]],
     ["https://raw.githubusercontent.com/Demikuu/post-audio-update-maps/main/HARDCORE%20UPROAR", "Hardcore Uproar", "APM Music", "Demisnya", "Brrrr", ["No Data"]],
@@ -1420,5 +1420,6 @@ document.addEventListener("DOMContentLoaded", loadMapData);
 </script>
 </body>
 </html>
+
 
 
