update oralex inter2 to not include walls

--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,7 @@ function loadMapData() {
     ["https://raw.githubusercontent.com/xilpy/sacga/main/TERA%20IO%20OVERMAP", "Tera I/O", "Camellia", "XILP", "Tasukete", ["Quantum", "Streams", "Jumps", "Spins", "Bursts", "Vibros"]],
     ["https://raw.githubusercontent.com/SheaNya/FinalizedSSMaps/main/Camellia%20-%20Tera%20IO", "Tera I/O", "Camellia", "SheaNya", "Tasukete", ["Quantum", "Streams", "Jumps", "Spins", "Bursts"]],
     ["https://gist.githubusercontent.com/Demikuu/5e9180bbf8f115a7d82c06cce92f4d0e/raw/8e99e3ee5a94602bf268d57fbdca129a820753c6/ie2", "Intercosmic Echo 2", "diamomd", "Demisnya", "Tasukete", ["Streams", "Jumps", "Spins", "Bursts"]],
-    ["https://raw.githubusercontent.com/zPr1nce/ss-songs/main/intercosmic%202%20OrAlex%20ver", "Intercosmic Echo 2", "diamomd", "Oralex", "Tasukete", ["Streams", "Jumps", "Spins", "Bursts", "Walls"]],
+    ["https://raw.githubusercontent.com/zPr1nce/ss-songs/main/intercosmic%202%20OrAlex%20ver", "Intercosmic Echo 2", "diamomd", "Oralex", "Tasukete", ["Streams", "Jumps"]],
     ["https://raw.githubusercontent.com/SheaNya/FinalizedSSMaps/refs/heads/main/WASSA%20-%20HR%20(Instrumental)", "wassa", "Hr", "SheaNya", "Tasukete", ["Streams"]],
     ["https://raw.githubusercontent.com/hihihihihiray/ss-maps/refs/heads/maps/stuffed%20jackal%20(snivy)", "Stuffed Jackal", "Korsio", "SnivyTrueForm", "Tasukete", ["Streams", "Spins", "Bursts"]],
     ["https://raw.githubusercontent.com/Demikuu/post-audio-update-maps/main/aaughh", "AAUGHH", "Rutra", "Demisnya", "Tasukete", ["Streams", "Jumps", "Spins"]],
@@ -1406,6 +1406,7 @@ document.addEventListener("DOMContentLoaded", loadMapData);
 </script>
 </body>
 </html>
+
 
 
 
