--- a/index.html
+++ b/index.html
@@ -1378,7 +1378,7 @@ function loadMapData() {
     ["https://github.com/Trivynium/In-game-maps/raw/main/mtf%20easy", "More Than Friends", "Kazuya", "SnivyTrueForm", "Easy", ["No Data"]],
     ["https://github.com/Trivynium/In-game-maps/raw/main/Where%20is%20this%3F", "ここはどこ...? (Where is this...?)", "Rizum", "SnivyTrueForm", "Easy", ["No Data"]],
     ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/JET%202%20HOLIDAY%20FUNK.txt", " JET 2 HOLIDAY FUNK", "shogrim", "porshii", "Brrrr", ["Quantum", "Unconventional", "Streams", "Slides"]],
-    ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/porshii%20wonderland", "Wonderland", "X3ll3n", "porshii", "Brrrr", ["Jumps", "Qauntum"]],
+    ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/porshii%20wonderland", "Wonderland", "X3ll3n", "porshii", "Brrrr", ["Jumps", "Quantum"]],
     ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/snivy%20love%20sick%20logic", "LoveSick! ft. Isabel", "kuNarU", "SnivyTrueForm", "Logic", ["No Data"]],
     ["https://raw.githubusercontent.com/Demikuu/post-audio-update-maps/main/high%20speed%20lane", "High Speed Lane", "APM Music", "Demisnya", "Brrrr", ["No Data"]],
 
@@ -1406,6 +1406,7 @@ document.addEventListener("DOMContentLoaded", loadMapData);
 </script>
 </body>
 </html>
+
 
 
 
