--- a/index.html
+++ b/index.html
@@ -1769,6 +1769,8 @@ const mapData = [
 ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/Zytrx%20-%20Hadron%20Collission%20(unnerfed)%20porshii","Hadron Collission","Zytrx","porshii","Brrrr",["Unconventional", "Quantum"],true],
 ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/nates%20intercosmic%20echo%202","Intercosmic Echo 2","diamomd","Nate10993","Brrrr",["Streams", "Slides", "Jumps"],true],
 ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/message%20(6).txt","CHWYKU","DJWahRA","Taco","Tasukete",["Streams", "Walls", "Jumps"],true],
+["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/nates%20intercosmic%20echo%202","Intercosmic Echo 2","diamomd","Nate10993","Brrrr",["Streams", "Slides", "Jumps"],true],
+["https://raw.githubusercontent.com/0livebobolive/olivebobolive-and-redhead413-spreadsheet/refs/heads/main/e","Nightune","Morphox","MrBrecken","Brrrr",["Shitpost", "Streams", "Mega Notes"],true],
 
 
    
@@ -1796,6 +1798,7 @@ document.addEventListener("DOMContentLoaded", loadMapData);
 </script>
 </body>
 </html>
+
 
 
 
