--- a/index.html
+++ b/index.html
@@ -956,6 +956,7 @@ h1 {
                     <button class="filter-button" data-filter="Stacks">Stacks</button>
                     <button class="filter-button" data-filter="Spins">Spins</button>
                     <button class="filter-button" data-filter="Slides">Slides</button>
+                    <button class="filter-button" data-filter="Vibros">Vibros</button>
                 </div>
             </div>
             
@@ -1770,6 +1771,7 @@ const mapData = [
 ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/nates%20intercosmic%20echo%202","Intercosmic Echo 2","diamomd","Nate10993","Brrrr",["Streams", "Slides", "Jumps"],true],
 ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/message%20(6).txt","CHWYKU","DJWahRA","Taco","Tasukete",["Streams", "Walls", "Jumps"],true],
 ["https://raw.githubusercontent.com/0livebobolive/olivebobolive-and-redhead413-spreadsheet/refs/heads/main/e","Nightune","Morphox","MrBrecken","Brrrr",["Shitpost", "Streams", "Mega Notes"],true],
+["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/Nate10993%20Camellia%20-%20Compute%20It%20With%20Some%20Devilish%20Alcoholic%20Steampunk%20Engines","Compute It With Some Devilish Alcoholic Steampunk Engines","Camellia ","Nate10993","Brrrr",["Vibros", "Jumps", "Quantums", "Streams" ],true],
 
 
    
@@ -1797,6 +1799,7 @@ document.addEventListener("DOMContentLoaded", loadMapData);
 </script>
 </body>
 </html>
+
 
 
 
