--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@ h1 {
 <h1>Sound Space Custom Maps</h1>
 
 <div id="search-container">
-    <input type="text" id="search-bar" placeholder="Search maps...">
+    <input type="text" id="search-bar" placeholder="Search maps, artists or mappers...">
     
     <div class="filter-dropdown">
         <button id="filter-toggle">Filters</button>
@@ -1797,6 +1797,7 @@ document.addEventListener("DOMContentLoaded", loadMapData);
 </script>
 </body>
 </html>
+
 
 
 
