--- a/index.html
+++ b/index.html
@@ -1535,7 +1535,7 @@ const mapData = [
 ["https://raw.githubusercontent.com/SheaNya/FinalizedSSMaps/main/Phonk%20Vol.%202%20-%20Back%20%26%20The%20Front","Phonk Vol. 2 - Back & The Front","APM Music","SheaNya","Brrrr",["No Data"],false],
 ["https://raw.githubusercontent.com/SheaNya/FinalizedSSMaps/main/Phonk%20Vol.%20I%20-%20Phonk't%20Out","Phonk Vol. I - Phonk't Out","APM Music","SheaNya","Brrrr",["No Data"],false],
 ["https://raw.githubusercontent.com/Demikuu/post-audio-update-maps/main/my%20future","My Future","APM Music","Demisnya","Brrrr",["No Data"],false],
-["https://raw.githubusercontent.com/xilpy/sacga/main/Fumitake%20Igarashi-Tokyo%20Drift","Tokyo Drift","Fumitake Igarashi","Xilp","Brrrr",["No Data"],false],
+["https://raw.githubusercontent.com/xilpy/sacga/refs/heads/main/Tokyo%20Drift","Tokyo Drift","Fumitake Igarashi","Xilp","Brrrr",["No Data"],false],
 ["https://raw.githubusercontent.com/Demikuu/post-audio-update-maps/main/bass%20monster","Bass Monster","APM Music","Demisnya","Brrrr",["No Data"],false],
 ["https://raw.githubusercontent.com/Demikuu/post-audio-update-maps/main/HARDCORE%20UPROAR","Hardcore Uproar","APM Music","Demisnya","Brrrr",["No Data"],false],
 ["https://raw.githubusercontent.com/Trivynium/run-it-back/main/run%20it%20back%20final","Run It Back","Author Wind & KuNarU","SnivyTrueForm","Brrrr",["No Data"],false],
@@ -1559,7 +1559,6 @@ const mapData = [
 ["https://raw.githubusercontent.com/Demikuu/post-audio-update-maps/main/FLAMECORNER","Flamewall","Camellia","Demisnya","Brrrr",["No Data"],false],
 ["https://gist.githubusercontent.com/ntoxazthenpxc/bcd123f93a0760d84a65d44e3e6940cc/raw/7b8a532ed40f68178010b00c02b48e9744f0418c/gistfile1.txt","Flamewall","Camellia","MAttD430","Brrrr",["No Data"],false],
 ["https://gist.githubusercontent.com/ntoxazthenpxc/bcd123f93a0760d84a65d44e3e6940cc/raw/7b8a532ed40f68178010b00c02b48e9744f0418c/gistfile1.txt","Flamewall","Camellia","MrSoundSpace","Brrrr",["No Data"],false],
-["https://raw.githubusercontent.com/karathy/some-maps/refs/heads/main/camellia%20-%20flamewall%20(dampxr)","Flamewall","Camellia","XR","Brrrr",["No Data"],false],
 ["https://raw.githubusercontent.com/Demikuu/post-audio-update-maps/main/fly%20wit%20me","Fly wit me","Camellia","Demisnya","Brrrr",["No Data"],false],
 ["https://gist.githubusercontent.com/cantaloupeyummy/2d3d035eff47e107b4bd6bd0111fd091/raw/209d27b2d8a361a6569f225bbef41d1cb8ccad9d/million%20pp","M1LLI0N PP","Camellia","canteloupe3727","Brrrr",["No Data"],false],
 ["https://raw.githubusercontent.com/Demikuu/post-audio-update-maps/main/m1lli0n%20pp%20brr","M1LLI0N PP","Camellia","Demisnya","Brrrr",["No Data"],false],
@@ -1797,6 +1796,7 @@ document.addEventListener("DOMContentLoaded", loadMapData);
 </script>
 </body>
 </html>
+
 
 
 
