--- a/index.html
+++ b/index.html
@@ -1594,7 +1594,7 @@ const mapData = [
 ["https://raw.githubusercontent.com/xilpy/sacga/main/one%20day%20in%20your%20bed","one day in your bed","Jackuw","Xilp","Brrrr",["No Data"],false],
 ["https://raw.githubusercontent.com/Demikuu/post-audio-update-maps/main/youll%20figure%20it%20out%2C%20you%20always%20do","you'll figure it out, you always do","Jackuw","Demisnya","Brrrr",["No Data"],false],
 ["https://gist.githubusercontent.com/Deathjkdf/1609d085af1b16d96f019c8cfcf6b31b/raw/2edfa0c1cecb0b57c66771b727ec2eac25eef81c/Karmadylo%2520-%2520Aizome.txt","Aizome","Karmadylo","FuSe Omega","Brrrr",["No Data"],false],
-["https://pastebin.com/raw/UYUhVku6","Aizome","Karmadylo","GarlicDog1","Brrrr",["No Data"],false],
+["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/aizome","Aizome","Karmadylo","GarlicDog1","Brrrr",["No Data"],false],
 ["https://gist.githubusercontent.com/uygsaufhbjasd/b2654880ea6492b951823eed137ae344/raw/a15d53c87ca16d7c27437602ccc957148afc7e02/AIZOMEBRRR","Aizome","Karmadylo","ZitroNitro & Azurlexx","Brrrr",["No Data"],false],
 ["https://raw.githubusercontent.com/Demikuu/post-audio-update-maps/main/aizome","Aizome","Karmadylo","Demisnya","Brrrr",["No Data"],false],
 ["https://raw.githubusercontent.com/Trivynium/In-game-maps/main/aizome%20final","Aizome","Karmadylo","SnivyTrueForm","Brrrr",["No Data"],false],
@@ -1796,6 +1796,7 @@ document.addEventListener("DOMContentLoaded", loadMapData);
 </script>
 </body>
 </html>
+
 
 
 
