--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<meta property="og:title" content="Sound Space Custom Maps">
+<meta property="og:title" content="SSCM">
 <meta property="og:description" content="Browse custom maps for Sound Space. Features maps from various artists and mappers with different difficulty levels.">
-<meta property="og:image" content="https://i.imgur.com/IGpUEpJ.png">
 <meta property="og:url" content="https://faworee.github.io/SoundSpaceCustoms/#">
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="Sound Space Custom Maps">
@@ -1804,6 +1803,7 @@ document.addEventListener("DOMContentLoaded", loadMapData);
 </script>
 </body>
 </html>
+
 
 
 
