--- a/index.html
+++ b/index.html
@@ -1776,6 +1776,8 @@ const mapData = [
 ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/message%20(6).txt","CHWYKU","DJWahRA","Taco","Tasukete",["Streams", "Walls", "Jumps"],true],
 ["https://raw.githubusercontent.com/0livebobolive/olivebobolive-and-redhead413-spreadsheet/refs/heads/main/e","Nightune","Morphox","MrBrecken","Brrrr",["Shitpost", "Streams", "Mega Notes"],true],
 ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/Nate10993%20Camellia%20-%20Compute%20It%20With%20Some%20Devilish%20Alcoholic%20Steampunk%20Engines","Compute It With Some Devilish Alcoholic Steampunk Engines","Camellia ","Nate10993","Brrrr",["Vibros", "Jumps", "Quantums", "Streams" ],true],
+["https://raw.githubusercontent.com/loveletterss/customs/refs/heads/main/Blanka%20-%20Job%20Application%20Phonk.txt","Job Application Phonk", "Blanka", "ciem","Brrrr",["Walls", "Mega Notes", "Quantums", "Jumps" ],true],
+["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/employment.txt","Job Application Phonk", "Blanka", "MrBrecken","Brrrr",["Shit Post"],true],
 
 
    
@@ -1803,6 +1805,7 @@ document.addEventListener("DOMContentLoaded", loadMapData);
 </script>
 </body>
 </html>
+
 
 
 
