--- a/index.html
+++ b/index.html
@@ -1804,6 +1804,7 @@ const mapData = [
 ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/Nate10993%20Camellia%20-%20Compute%20It%20With%20Some%20Devilish%20Alcoholic%20Steampunk%20Engines","Compute It With Some Devilish Alcoholic Steampunk Engines","Camellia ","Nate10993","Brrrr",["Vibros", "Jumps", "Quantums", "Streams" ],true],
 ["https://raw.githubusercontent.com/loveletterss/customs/refs/heads/main/Blanka%20-%20Job%20Application%20Phonk.txt","Job Application Phonk", "Blanka", "ciem","Brrrr",["Walls", "Mega Notes", "Quantums", "Jumps" ],true],
 ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/employment.txt","Job Application Phonk", "Blanka", "MrBrecken","Brrrr",["Shit Post"],true],
+["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/DJWahRA%20-%20HOTAKFUNK%20-%20Taco","HOTAKFUNK","DJWahRA","Taco","Tasukete",["Streams", "Walls", "Jumps"],true],
 
 
    
@@ -1831,6 +1832,7 @@ document.addEventListener("DOMContentLoaded", loadMapData);
 </script>
 </body>
 </html>
+
 
 
 
