--- a/index.html
+++ b/index.html
@@ -1805,7 +1805,7 @@ const mapData = [
 ["https://raw.githubusercontent.com/loveletterss/customs/refs/heads/main/Blanka%20-%20Job%20Application%20Phonk.txt","Job Application Phonk", "Blanka", "ciem","Brrrr",["Walls", "Mega Notes", "Quantums", "Jumps" ],true],
 ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/employment.txt","Job Application Phonk", "Blanka", "MrBrecken","Brrrr",["Shit Post"],true],
 ["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/DJWahRA%20-%20HOTAKFUNK%20-%20Taco","HOTAKFUNK","DJWahRA","Taco","Tasukete",["Streams", "Walls", "Jumps"],true],
-["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/rizzlerbullet%20skibidi%20fanum%20tax%20taco","skibidi fanum tax","RizzlerBullet","Taco","Brrrr",["No Data"],true],
+["https://raw.githubusercontent.com/Faworee/faworee_Converts_soundspacecustoms/refs/heads/main/rizzlerbullet%20skibidi%20fanum%20tax%20taco","skibidi fanum tax","RizzlerBullet","Taco","Tasukete",["No Data"],true],
 
    
            
@@ -1832,6 +1832,7 @@ document.addEventListener("DOMContentLoaded", loadMapData);
 </script>
 </body>
 </html>
+
 
 
 
