--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ h1 {
     box-shadow: 0px 8px 20px rgba(0,0,0,0.4);
     z-index: 1000;
     border-radius: 15px;
-    padding: 20px;
+    padding: 15px;
     margin-top: 10px;
     border: 1px solid #444;
 }
@@ -158,7 +158,7 @@ h1 {
 }
 
 .filter-section {
-    margin-bottom: 20px;
+    margin-bottom: 12px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -168,28 +168,41 @@ h1 {
 .filter-section h3 {
     color: #4facfe;
     font-size: 1.1em;
-    margin-bottom: 10px;
+    margin-bottom: 6px;
 }
 
 .filter-buttons {
     display: flex;
     flex-wrap: wrap;
-    gap: 8px;
+    gap: 6px;
     justify-content: center;
     align-items: center;
     width: 100%;
 }
 
-.filter-grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 30px;
-    margin-bottom: 20px;
+.top-filters-row {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 15px;
 }
 
-.filter-grid-container .filter-section {
+.top-filters-row .filter-section {
+    flex: 1;
     margin-bottom: 0;
+}
+
+.range-filters-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 15px;
+}
+
+.range-filters-container .filter-section {
+    flex: 0 1 auto;
+    margin-bottom: 0;
+    min-width: 120px;
 }
 
 .duration-filter-section, .notes-filter-section {
@@ -206,14 +219,6 @@ h1 {
     margin-bottom: 10px;
 }
 
-.range-filters-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 30px;
-    align-items: start;
-    margin-bottom: 20px;
-}
-
 .range-filter-group {
     display: flex;
     flex-direction: column;
@@ -225,18 +230,18 @@ h1 {
 .textbox-group {
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: 6px;
     justify-content: center;
 }
 
 .filter-textbox {
-    padding: 6px 10px;
+    padding: 4px 8px;
     border-radius: 15px;
     border: 1px solid #444;
     background-color: #1e1e1e;
     color: white;
     font-size: 0.85em;
-    width: 80px;
+    width: 70px;
     text-align: center;
 }
 
@@ -256,7 +261,7 @@ h1 {
     color: white;
     border: none;
     border-radius: 20px;
-    padding: 6px 12px;
+    padding: 4px 8px;
     cursor: pointer;
     font-size: 0.9em;
     transition: all 0.2s;
@@ -277,8 +282,8 @@ h1 {
 .bottom-filters-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 30px;
-    margin-bottom: 20px;
+    gap: 20px;
+    margin-bottom: 15px;
 }
 
 .apm-filter, .other-filters {
@@ -311,13 +316,13 @@ h1 {
     display: flex;
     justify-content: space-between;
     gap: 10px;
-    margin-top: 15px;
-    padding-top: 15px;
+    margin-top: 10px;
+    padding-top: 10px;
     border-top: 1px solid #444;
 }
 
 .clear-filters, .apply-filters {
-    padding: 8px 16px;
+    padding: 6px 12px;
     border: none;
     border-radius: 20px;
     cursor: pointer;
@@ -818,8 +823,14 @@ h1 {
         overflow-y: auto;
     }
 
-    .filter-grid-container, .range-filters-grid, .bottom-filters-grid {
-        display: block;
+    .top-filters-row, .range-filters-container, .bottom-filters-grid {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .top-filters-row .filter-section, .range-filters-container .filter-section {
+        flex: none;
+        margin-bottom: 10px;
     }
 
     .range-filter-group {
@@ -886,8 +897,8 @@ h1 {
 <body>
 
 <div class="header-container">
-    <a href="/SoundSpaceCustoms/Info.html" class="header-button info-button">Info</a>
-    <a href="https://discord.gg/95snurYcGX" class="header-button discord-button" target="_blank">Join our Discord</a>
+    <a href="/SoundSpaceCustoms/Info" class="header-button info-button">Info</a>
+    <a href="https://faworee.github.io/SoundSpaceCustoms/SubmitMaps" class="header-button discord-button">Submit Map</a>
 </div>
 
 <h1>Sound Space Custom Maps</h1>
@@ -898,7 +909,7 @@ h1 {
     <div class="filter-dropdown">
         <button id="filter-toggle">Filters</button>
         <div id="filter-menu">
-            <div class="filter-grid-container">
+            <div class="top-filters-row">
                 <div class="filter-section">
                     <h3>Difficulty</h3>
                     <div class="filter-buttons" id="difficulty-filters">
@@ -928,7 +939,9 @@ h1 {
                         <button class="filter-button" data-filter="Vibros">Vibros</button>
                     </div>
                 </div>
-                
+            </div>
+
+            <div class="range-filters-container">
                 <div class="filter-section">
                     <h3>Duration Filter</h3>
                     <div class="textbox-group">
@@ -969,7 +982,7 @@ h1 {
 
                 <div class="filter-section">
                     <h3>Other Filters</h3>
-                    <div class="other-filters">
+                    <div class="%other-filters">
                         <div class="filter-option">
                             <input type="checkbox" id="new-maps-only">
                             <label for="new-maps-only">New Maps Only</label>
@@ -1832,6 +1845,7 @@ document.addEventListener("DOMContentLoaded", loadMapData);
 </script>
 </body>
 </html>
+
 
 
 
