--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ body {
 }
 
 .performance-toggle {
-    position: absolute;
+    position: middle;
     right: 0;
-    top: -40px;
+    top: 0px;
     background: rgba(79, 172, 254, 0.2);
     border: 1px solid rgba(79, 172, 254, 0.4);
     color: #4facfe;
@@ -101,7 +101,7 @@ h1 {
     margin-bottom: 30px;
 }
 
-.low-quality h1 {
+. h1 {
     background: none;
     color: #4facfe;
     -webkit-text-fill-color: initial;
@@ -130,7 +130,7 @@ h1 {
     transition: box-shadow 0.3s;
 }
 
-.low-quality #search-bar {
+. #search-bar {
     box-shadow: none;
     border: 1px solid #444;
     transition: none;
@@ -141,7 +141,7 @@ h1 {
     box-shadow: inset 0 0 8px rgba(0, 255, 255, 0.3), 0 0 15px rgba(0, 255, 255, 0.5);
 }
 
-.low-quality #search-bar:focus {
+. #search-bar:focus {
     box-shadow: none;
     border-color: #4facfe;
 }
@@ -162,7 +162,7 @@ h1 {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
 }
 
-.low-quality #filter-toggle, .low-quality #sort-toggle {
+. #filter-toggle, . #sort-toggle {
     transition: none;
     box-shadow: none;
     border: 1px solid #444;
@@ -172,7 +172,7 @@ h1 {
     background: linear-gradient(90deg, #17a2b8, #138496);
 }
 
-.low-quality #filter-toggle {
+. #filter-toggle {
     background: #17a2b8;
 }
 
@@ -181,7 +181,7 @@ h1 {
     box-shadow: 0 0 12px #138496;
 }
 
-.low-quality #filter-toggle:hover {
+. #filter-toggle:hover {
     transform: none;
     box-shadow: none;
     background: #138496;
@@ -191,7 +191,7 @@ h1 {
     background: linear-gradient(90deg, #28a745, #218838);
 }
 
-.low-quality #sort-toggle {
+. #sort-toggle {
     background: #28a745;
 }
 
@@ -200,7 +200,7 @@ h1 {
     box-shadow: 0 0 12px #218838;
 }
 
-.low-quality #sort-toggle:hover {
+. #sort-toggle:hover {
     transform: none;
     box-shadow: none;
     background: #218838;
@@ -321,7 +321,7 @@ h1 {
     box-shadow: 0 0 5px rgba(79, 172, 254, 0.3);
 }
 
-.low-quality .filter-textbox:focus {
+. .filter-textbox:focus {
     box-shadow: none;
 }
 
@@ -342,7 +342,7 @@ h1 {
     flex-shrink: 0;
 }
 
-.low-quality .filter-button {
+. .filter-button {
     transition: none;
 }
 
@@ -351,7 +351,7 @@ h1 {
     box-shadow: 0 0 8px rgba(255,255,255,0.2);
 }
 
-.low-quality .filter-button:hover {
+. .filter-button:hover {
     box-shadow: none;
 }
 
@@ -361,7 +361,7 @@ h1 {
     box-shadow: 0 0 8px #218838;
 }
 
-.low-quality .filter-button.active {
+. .filter-button.active {
     background: #28a745;
     box-shadow: none;
 }
@@ -417,7 +417,7 @@ h1 {
     transition: all 0.2s;
 }
 
-.low-quality .clear-filters, .low-quality .apply-filters {
+. .clear-filters, . .apply-filters {
     transition: none;
 }
 
@@ -449,7 +449,7 @@ h1 {
     align-items: stretch;
 }
 
-.low-quality #map-list {
+. #map-list {
     gap: 15px;
 }
 
@@ -471,7 +471,7 @@ h1 {
     z-index: 1;
 }
 
-.low-quality .map-card {
+. .map-card {
     box-shadow: none;
     transition: none;
     background: #222;
@@ -487,7 +487,7 @@ h1 {
     background: linear-gradient(135deg, #2a2a2a, #1a1a1a);
 }
 
-.low-quality .map-card:hover {
+. .map-card:hover {
     transform: none;
     box-shadow: none;
     background: #333;
@@ -511,7 +511,7 @@ h1 {
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
-.low-quality .new-tag {
+. .new-tag {
     background: #ff6b6b;
     animation: none;
     box-shadow: none;
@@ -564,7 +564,7 @@ h1 {
     transition: color 0.2s;
 }
 
-.low-quality .map-name {
+. .map-name {
     transition: none;
 }
 
@@ -574,7 +574,7 @@ h1 {
     transition: color 0.2s;
 }
 
-.low-quality .map-name a {
+. .map-name a {
     transition: none;
 }
 
@@ -608,7 +608,7 @@ h1 {
     white-space: nowrap;
 }
 
-.low-quality .map-duration, .low-quality .map-notes {
+. .map-duration, . .map-notes {
     background: rgba(79, 172, 254, 0.05);
     border-radius: 5px;
 }
@@ -640,7 +640,7 @@ h1 {
     white-space: nowrap;
 }
 
-.low-quality .map-tags span {
+. .map-tags span {
     border-radius: 6px;
 }
 
@@ -663,7 +663,7 @@ h1 {
     background-color: #007bff;
 }
 
-.low-quality .copy-btn {
+. .copy-btn {
     transition: none;
     border-radius: 15px;
 }
@@ -673,7 +673,7 @@ h1 {
     transform: scale(1.05);
 }
 
-.low-quality .copy-btn:hover {
+. .copy-btn:hover {
     transform: none;
 }
 
@@ -698,7 +698,7 @@ h1 {
     background-color: #333;
 }
 
-.low-quality .patterns-dropdown-toggle {
+. .patterns-dropdown-toggle {
     transition: none;
     border-radius: 15px;
 }
@@ -708,7 +708,7 @@ h1 {
     transform: scale(1.05);
 }
 
-.low-quality .patterns-dropdown-toggle:hover {
+. .patterns-dropdown-toggle:hover {
     transform: none;
 }
 
@@ -728,7 +728,7 @@ h1 {
     max-width: 150px;
 }
 
-.low-quality .patterns-dropdown-menu {
+. .patterns-dropdown-menu {
     box-shadow: none;
     border: 1px solid #444;
 }
@@ -797,7 +797,7 @@ h1 {
     background-color: #333;
 }
 
-.low-quality .action-dropdown-toggle {
+. .action-dropdown-toggle {
     transition: none;
     border-radius: 15px;
 }
@@ -807,7 +807,7 @@ h1 {
     transform: scale(1.05);
 }
 
-.low-quality .action-dropdown-toggle:hover {
+. .action-dropdown-toggle:hover {
     transform: none;
 }
 
@@ -825,7 +825,7 @@ h1 {
     margin-bottom: 5px;
 }
 
-.low-quality .action-dropdown-menu {
+. .action-dropdown-menu {
     box-shadow: none;
     border: 1px solid #444;
 }
@@ -846,7 +846,7 @@ h1 {
     transition: background-color 0.2s;
 }
 
-.low-quality .action-dropdown-menu .dropdown-item {
+. .action-dropdown-menu .dropdown-item {
     transition: none;
 }
 
@@ -912,7 +912,7 @@ h1 {
     color: white;
 }
 
-.low-quality .map-stat-item {
+. .map-stat-item {
     background: #1a1a1a;
     box-shadow: none;
     border-radius: 15px;
@@ -926,7 +926,7 @@ h1 {
     vertical-align: middle;
 }
 
-.low-quality .map-stat-item img {
+. .map-stat-item img {
     filter: none;
 }
 
@@ -955,7 +955,7 @@ h1 {
     box-shadow: 0 4px 15px rgba(79, 172, 254, 0.4);
 }
 
-.low-quality .load-more-btn {
+. .load-more-btn {
     background: #4facfe;
     box-shadow: none;
     transition: none;
@@ -967,7 +967,7 @@ h1 {
     box-shadow: 0 8px 25px rgba(79, 172, 254, 0.6);
 }
 
-.low-quality .load-more-btn:hover {
+. .load-more-btn:hover {
     transform: none;
     box-shadow: none;
     background: #00f2fe;
@@ -990,7 +990,7 @@ h1 {
     font-size: 0.9em;
 }
 
-.low-quality .scroll-indicator {
+. .scroll-indicator {
     border-radius: 10px;
 }
 
@@ -1271,7 +1271,7 @@ h1 {
 
     performanceToggle.addEventListener('click', () => {
         isLowQualityMode = !isLowQualityMode;
-        document.body.classList.toggle('low-quality', isLowQualityMode);
+        document.body.classList.toggle('', isLowQualityMode);
         performanceToggle.classList.toggle('active', isLowQualityMode);
         performanceToggle.textContent = isLowQualityMode ? 'High Quality Mode' : 'Low Quality Mode';
         
@@ -1973,3 +1973,4 @@ h1 {
 </script>
 </body>
 </html>
+
