--- a/index.html
+++ b/index.html
@@ -721,11 +721,11 @@
                 mapStatsHtml = `
                     <div class="map-stats">
                         <div class="map-stat-item">
-                            <img src="https://i.imgur.com/lv0ynEi.png" alt="Timer Icon">
+                            <img src="Clock.png" alt="Timer Icon">
                             <span>--:--</span>
                         </div>
                         <div class="map-stat-item">
-                            <img src="https://i.imgur.com/7pfvgCl.png" alt="Notes Icon">
+                            <img src="Note.png" alt="Notes Icon">
                             <span>----</span>
                         </div>
                     </div>
@@ -895,6 +895,8 @@
 
 <title>Sound Space Custom Maps - Enhanced</title>
 <style>
+
+    
 body {
     background-color: #0f0f0f;
     color: white;
@@ -902,7 +904,12 @@ body {
     text-align: center;
     padding: 20px;
     margin: 0;
+    transform: scale(0.8);
+    transform-origin: top center;
+
 }
+
+
 
 .patterns-dropdown-toggle.no-click {
     cursor: default;
