--- a/index.html
+++ b/index.html
@@ -902,6 +902,8 @@ body {
     text-align: center;
     padding: 20px;
     margin: 0;
+    transform: scale(0.75);
+    transform-origin: top center;
 }
 
 .patterns-dropdown-toggle.no-click {
@@ -1976,3 +1978,4 @@ h1 {
         padding: 15px;
     }
 }
+
