--- a/index.html
+++ b/index.html
@@ -721,11 +721,11 @@
                 mapStatsHtml = `
                     <div class="map-stats">
                         <div class="map-stat-item">
-                            <img src="https://i.imgur.com/lv0ynEi.png" alt="Timer Icon">
+                            <img src="Clock.png" alt="Timer Icon">
                             <span>--:--</span>
                         </div>
                         <div class="map-stat-item">
-                            <img src="https://i.imgur.com/7pfvgCl.png" alt="Notes Icon">
+                            <img src="Note.png" alt="Notes Icon">
                             <span>----</span>
                         </div>
                     </div>
@@ -895,6 +895,8 @@
 
 <title>Sound Space Custom Maps - Enhanced</title>
 <style>
+
+    
 body {
     background-color: #0f0f0f;
     color: white;
@@ -904,7 +906,10 @@ body {
     margin: 0;
     transform: scale(0.75);
     transform-origin: top center;
+
 }
+
+
 
 .patterns-dropdown-toggle.no-click {
     cursor: default;
@@ -1325,14 +1330,16 @@ h1 {
     background-color: #0056b3;
 }
 
+
 #map-list {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    grid-template-columns: repeat(auto-fit, 320px);
     gap: 30px;
     padding: 0 20px;
     margin: 0 auto;
     max-width: 1400px;
     align-items: stretch;
+    justify-content: center;
 }
 
 .low-quality #map-list {
@@ -1978,4 +1985,3 @@ h1 {
         padding: 15px;
     }
 }
-
