--- a/index.html
+++ b/index.html
@@ -1335,11 +1335,12 @@ h1 {
     display: grid;
     grid-template-columns: repeat(auto-fit, 320px);
     gap: 30px;
-    padding: 0 20px;
-    margin: 0 auto;
-    max-width: 1400px;
+    padding: 0;
+    margin: 0;
+    width: max-content;
     align-items: stretch;
-    justify-content: center;
+    justify-content: start;
+    overflow-x: auto;
 }
 
 .low-quality #map-list {
