--- a/index.html
+++ b/index.html
@@ -904,8 +904,7 @@ body {
     text-align: center;
     padding: 20px;
     margin: 0;
-    transform: scale(0.75);
-    transform-origin: top center;
+    width: 100vw;
 
 }
 
