--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@ body {
     text-align: center;
     padding: 20px;
     margin: 0;
-    transform: scale(0.75);
+    transform: scale(0.9);
     transform-origin: top center;
 
 }
@@ -1960,7 +1960,7 @@ h1 {
     text-align: center;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1000x) {
     .header-container {
         flex-direction: column;
         gap: 15px;
@@ -1983,3 +1983,4 @@ h1 {
         padding: 15px;
     }
 }
+
