--- a/index.html
+++ b/index.html
@@ -1353,10 +1353,13 @@ h1 {
     justify-content: space-between;
     padding: 20px;
     min-height: 200px;
+    max-height: 250px;
+    min-width: 300px;
+    max-width: 400px;
     border: 2px solid #555;
     transition: transform 0.3s, box-shadow 0.3s, border 0.3s, background 0.3s;
     background: linear-gradient(135deg, #222, #1a1a1a);
-    width: 100%;
+    width: 80%;
     box-sizing: border-box;
     overflow: hidden;
     z-index: 1;
@@ -1983,4 +1986,5 @@ h1 {
         padding: 15px;
     }
 }
+
 
