--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@ h1 {
 
 #map-list {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 25px;
     padding: 0 20px;
     margin: 0 auto;
@@ -651,9 +651,15 @@ h1 {
     }
 }
 
-@media (min-width: 769px) and (max-width: 1199px) {
+@media (min-width: 769px) and (max-width: 899px) {
     #map-list {
         grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (min-width: 900px) and (max-width: 1199px) {
+    #map-list {
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
