--- a/index.html
+++ b/index.html
@@ -1476,11 +1476,11 @@ h1 {
 
 <div class="header-container">
     <div class="header-left">
-        <a href="#" class="header-button info-button">Info</a>
+        <a href="/SoundSpaceCustoms/Info" class="header-button info-button">Info</a>
         <button class="header-button random-button" id="random-map-btn">Copy Random Map</button>
     </div>
     <div class="header-right">
-        <a href="#" class="header-button discord-button">Submit Map</a>
+        <a href="https://faworee.github.io/SoundSpaceCustoms/SubmitMaps" class="header-button discord-button">Submit Map</a>
         <div class="settings-dropdown">
             <button class="settings-toggle" id="settings-toggle">⚙ Settings</button>
             <div class="settings-menu" id="settings-menu">
