--- a/index.html
+++ b/index.html
@@ -2964,6 +2964,13 @@ document.addEventListener('click', (event) => {
 
 function initChangeLog() {
     const changeLogData = [
+           {
+            version: "1.2.2 - Maps",
+            date: "2025-11-11",
+            changes: [
+                "Removed maps from 2 mappers, they didnt want them public anymore.",
+            ]
+        },
          {
             version: "1.2.2 - Hotfix",
             date: "2025-11-09",
@@ -3097,3 +3104,4 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 </body>
 </html>
+
