--- a/index.html
+++ b/index.html
@@ -3128,6 +3128,15 @@ document.addEventListener('click', (event) => {
 
 function initChangeLog() {
     const changeLogData = [
+
+         {
+            version: "1.2.3 - Loading improvements",
+            date: "2025-13-11",
+            changes: [
+                "Loading should be way faster now.",
+                "🤫",
+            ]
+        },
            {
             version: "1.2.2 - Maps",
             date: "2025-11-11",
@@ -3268,6 +3277,7 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 </body>
 </html>
+
 
 
 
