--- a/index.html
+++ b/index.html
@@ -1408,6 +1408,7 @@ h1 {
     border: none;
     color: white;
     background-color: #333;
+    white-space: nowrap;  
 }
 
 .low-quality .patterns-dropdown-toggle {
@@ -1653,7 +1654,7 @@ h1 {
 
 <script>
 (function() {
-    // THIS LOGS ERRORS DONT ABUSE THE WEBHOOK PLEASE
+    // THIS LOGS ERRORS DONT ABUSE THE WEBHOOK PLEASE, IF YOU DO I WILL BLOCK YOUR IP
     const ANALYTICS_WEBHOOK = 'https://discord.com/api/webhooks/1438692061418094682/jpGk9hb5-wWS4Gt8Z8-BvU8CToQhhw3DP36pGQs73GPOYvykg9v42jmh3br-lLLojU2Q';
     let locationData = null;
     let errorsSent = new Set();
